// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:link 1`] = `
<div>
  <a
    class="__AMIS_COMPONENT_CLASS_PREFIX__Link show"
    href="https://www.baidu.com"
    target="_blank"
  >
    https://www.baidu.com
  </a>
</div>
`;

exports[`Renderer:link with disabled 1`] = `
<div>
  <a
    class="__AMIS_COMPONENT_CLASS_PREFIX__Link is-disabled"
    href="https://www.baidu.com"
    target="_blank"
  >
    <span
      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
    >
      <span>
        百度一下
      </span>
    </span>
  </a>
</div>
`;

exports[`Renderer:link with href & blank & htmlTarget 1`] = `
<div>
  <a
    class="__AMIS_COMPONENT_CLASS_PREFIX__Link"
    href="https://www.baidu.com"
    target="_self"
  >
    <span
      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
    >
      <span>
        百度一下
      </span>
    </span>
  </a>
</div>
`;

exports[`Renderer:link with title & icon & rightIcon 1`] = `
<div>
  <a
    class="__AMIS_COMPONENT_CLASS_PREFIX__Link"
    href="https://www.baidu.com"
    target="_blank"
    title="linkTitleForTest"
  >
    <i
      class="fa fa-search __AMIS_COMPONENT_CLASS_PREFIX__Link-icon fa fa-search"
    />
    <span
      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
    >
      <span>
        百度一下
      </span>
    </span>
    <i
      class="fa fa-cloud __AMIS_COMPONENT_CLASS_PREFIX__Link-icon fa fa-cloud"
    />
  </a>
</div>
`;
